--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
     <h5>Way</h5>
     <h6>Up</h6>
     <p>High</p>
+    <ol>
+        <li class="itemsB" id="firstItem">First Item</li>
+        <li>Second Item</li>
+        <li class="itemsB" id="lastItem">Third Item</li>
+    </ol>
 </body>
 </html>
